# cf-waf-analyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: cliff.toml
.github/workflows/: ci.yml  release.yml
example-logs/: firewall-events.json
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/cli/: mod.rs
src/error/: mod.rs
src/model/: mod.rs
src/output/: console_output.rs  markdown_fmt.rs  mod.rs  output_formatter.rs  text_fmt.rs
